--- a/src/Sections/DosAndDonts/styles.module.scss
+++ b/src/Sections/DosAndDonts/styles.module.scss
@@ -1,30 +1,36 @@
 @import "../../styles/colors.scss";
 
-.dosAndDontsWrapper{
+.dosAndDontsWrapper {
   height: 100vh;
-  padding-top: 12rem;
+  align-items: center;
+}
+
+.dosDontsContent{
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  padding: 4rem;
   background-color: #FBFBFB;
-  margin-bottom: 4rem;
-  h5{
-    text-align: center;
+  box-shadow: 0px 1px 6px #00000029;
+  h5 {
     font-weight: bold;
     font-size: 3.125rem;
     color: $grey-4;
-    margin-bottom: 4rem;
+    margin-bottom: 1rem;
     letter-spacing: 0.9px;
-    span{
+    span {
       font-size: 1rem;
       vertical-align: middle;
     }
   }
   ul {
     li {
-    font-weight: bold;
-      font-size: 1.3rem;
+      font-weight: bold;
+      font-size: 1.2rem;
       line-height: 1.8;
       color: $grey-1;
-      a, a:active{
-        color: purple
+      a,
+      a:active {
+        color: purple;
       }
     }
   }
