--- a/src/Sections/COE/COE.module.scss
+++ b/src/Sections/COE/COE.module.scss
@@ -29,6 +29,7 @@
   border-top-left-radius: 0.625rem !important;
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
+  max-height: 340px;
 }
 
 .coeCardBody{
