--- a/src/Sections/ThankYou/ThankYou.module.scss
+++ b/src/Sections/ThankYou/ThankYou.module.scss
@@ -16,8 +16,16 @@
   }
 }
 
-.videoWrapper{
-  max-height: calc(100vh - 20rem);
-  width: 80%;
-  margin: 0 auto;
+.videoContainer {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
+
