--- a/src/Components/GroupCard/GroupCard.module.scss
+++ b/src/Components/GroupCard/GroupCard.module.scss
@@ -2,7 +2,7 @@
   text-align: center;
   height: 100%;
   max-height: 32.8125rem;
-  width: 23rem;
+  max-width: 23rem;
   h4{
     font-size: 1.2rem;
   }
