--- a/src/Components/GroupCard/GroupCard.module.scss
+++ b/src/Components/GroupCard/GroupCard.module.scss
@@ -1,8 +1,5 @@
 .groupCard{
   text-align: center;
-  height: 100%;
-  max-height: 32.8125rem;
-  max-width: 23rem;
   h4{
     font-size: 1.2rem;
   }
@@ -20,6 +17,8 @@
 .groupCardImg{
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
+  width: 100%;
+  height: auto;
 }
 
 .groupdCardBody{
