updating the client list

--- a/src/Sections/Clients/Clients.module.scss
+++ b/src/Sections/Clients/Clients.module.scss
@@ -20,9 +20,9 @@
   max-height: 10.625rem;
 }
 
-.clientRow{
-  flex-direction: row;
-}
+// .clientRow{
+//   flex-direction: row;
+// }
 
 .imageRow{
   height: 10.625rem;
@@ -36,7 +36,7 @@
 .buttonRow{
   text-align: center;
   align-items: center;
-  align-content: space-around;
+  // align-content: space-around;
 }
 
 .clientBtn{
