--- a/src/Components/GroupCard/GroupCard.module.scss
+++ b/src/Components/GroupCard/GroupCard.module.scss
@@ -1,5 +1,8 @@
 .groupCard{
   text-align: center;
+  height: 100%;
+  max-height: 32.8125rem;
+  max-width: 23rem;
   h4{
     font-size: 1.2rem;
   }
