--- a/src/Sections/Tools/Tools.module.scss
+++ b/src/Sections/Tools/Tools.module.scss
@@ -5,6 +5,7 @@
   background-position: 100% 100%;
   background-repeat: no-repeat;
   background-size: contain;
+  margin-bottom: 5rem;
 }
 
 .toolCard{
